# qtGLGrabberDesigner

./: .gitignore  CMakeLists.txt  LICENSE  README.md
form/: grabber.ui
src/: glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
